# concierge-app

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  GOOGLE_CALENDAR_SETUP.md  IOS_SHORTCUTS_GUIDE.md  LEARNING.md  README.md  key  key.pub  pyproject.toml  render.yaml  setup.sh  spec.md  test_api.py
.claude/: settings.local.json
app/: config.py  main.py  models.py
app/services/: agent.py  github_vault.py  google_calendar.py  transcriber.py
app/tools/: calendar_tools.py  note_tools.py  todo_tools.py
